--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
         </section>
             <aside>
                 <div class="side">
-                    <h3 class="motive">Motivational Quotes:</h3>
-                    <div class="pp">"Good, better, best, never settle for less! Until your good gets better and your better becomes best!"</div>
-                    <p>'Tim Duncan'</p>
+                    <h3 class="more">A little more
+                        <ul>
+                            <li><a href="hobbies">Hobbies</a></li>
+                            <li><a href="sports">Sports</a></li>
+                        </ul>
+                    </h3>
+
+                    
                 </div>
                 </aside>
         <footer>
