--- a/Andre.html
+++ b/Andre.html
@@ -12,8 +12,9 @@
         </div>
             <nav>
                 <ul>
-                    <li><a href="portfolio">Portfolio</a></li>
-                    <li><a href="Contact">Contact</a></li>
+                    <a href="#" class= "portbutton">Portfolio</a>
+                    <br><br>
+                    <a href="#" class= "conbutton">Contact</a>
 
                 </ul>
             </nav>
@@ -21,25 +22,20 @@
         <section>
             <!-- Put stuff in here that is the content -->
             <h2 class="about">About Me</h2>
-            <article class="article">Article</article>
             <br>
-            <br>
-            <div class="p">Currently I'm in enrolled in the UofT SCS Bootcamp studying to become a Fullstack Web Developer. I have a passion for creativity and plan to implement my ideas through the skills learned within the program.</div>
+            <div class="p">Currently I'm enrolled in the UofT SCS Bootcamp studying to become a Fullstack Web Developer. I have a passion for creativity and plan to implement my ideas through the skills learned within the program.</div>
         </section>
             <aside>
-                <div class="side">
-                    <h3 class="more">A little more
+                    <h3 id="more">A little More....
                         <ul>
-                            <li><a href="hobbies">Hobbies</a></li>
-                            <li><a href="sports">Sports</a></li>
+                            <a href="#" class="hobbutton">Hobbies</a>
+                            <br><br>
+                            <a href="#" class="sportbutton">Sports</a>
                         </ul>
                     </h3>
-
-                    
-                </div>
                 </aside>
         <footer>
             <!-- Put stuff in here that is the footer -->
-            <small>Copyright <a href="#" title="dre">Andre Brown</a>. All rights reserved.</small>
+            <small>Copyright <a id="dre">Andre Brown</a>. All rights reserved.</small>
         </footer>
     </body>
