--- a/Andre.html
+++ b/Andre.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Andre Brown</title>
-        <link rel="stylesheet" href="style.css" type="text/css"/>
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
         <header>
