--- a/Andre.html
+++ b/Andre.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Andre Brown</title>
+        <title></title>
+        <link rel="stylesheet" href="reset.css" type="text/css">
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        <header>
-            <div id="wrapper">
-            <!-- Put stuff in here that would be the header of the page -->
-            <h1 class="andre">Andre Brown</h1>
-        </div>
+        <header id="masterhead">
+            <div class="container">
+            <a href="Andre.html" id="logo">Your Name</a>
             <nav>
-                <ul>
-                    <a href="#" class= "portbutton">Portfolio</a>
-                    <br><br>
-                    <a href="#" class= "conbutton">Contact</a>
-
-                </ul>
+                <a href="Andre.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
             </nav>
+            </div>
         </header>
-        <section>
-            <!-- Put stuff in here that is the content -->
-            <h2 class="about">About Me</h2>
-            <br>
-            <div class="p">Currently I'm enrolled in the UofT SCS Bootcamp studying to become a Fullstack Web Developer. I have a passion for creativity and plan to implement my ideas through the skills learned within the program.</div>
-        </section>
-            <aside>
-                    <h3 id="more">A little More....
-                        <ul>
-                            <a href="#" class="hobbutton">Hobbies</a>
-                            <br><br>
-                            <a href="#" class="sportbutton">Sports</a>
-                        </ul>
-                    </h3>
-                </aside>
-        <footer>
-            <!-- Put stuff in here that is the footer -->
-            <small>Copyright <a id="dre">Andre Brown</a>. All rights reserved.</small>
-        </footer>
+    <div id="main" class="container">        
+        <section class="main">
+            <h1>About Me</h1>
+
+            <img src="http://via.placeholder.com/250/ffffff/000000" alt="PlaceHolder" height="150" width="150" id="face">
+                
+                <p class="p">Hello my name is Andre. Currently, I'm in the UofT SCS Bootcamp.</p> 
+                <p class="p2">It is the first ever bootcamp to be held in Canada and I'm very excited to be part of this monumental opportunity.</p> 
+                <p class="p3"><br>I have a passion for creativity and thinking outside of the box and I believe that learning the material being taught within this bootcamp will allow me to implement my ideas for the world to see.</p> 
+                <p class="p4"><br>Aside from that, I enjoy palying sports, basketball being number 1, I enjoy drawing and I also like playing videogames.</p>
+         </section>
+
+         <section class="sidebar">
+             <div id="connect">
+                 <h2>Connect With Me</h2>
+                    <p>bhhfbsbhhfsb</p>
+             </div>
+
+         </section>
+    </div>
+    <footer>
+        <div class="container">
+        &copy; Copyright 2018 Andre Brown</p>
+        </div>
+    </footer>
+
+
+
     </body>
+</html>
