--- a/Andre.html
+++ b/Andre.html
@@ -4,11 +4,12 @@
         <title></title>
         <link rel="stylesheet" href="reset.css" type="text/css">
         <link rel="stylesheet" href="style.css" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header id="masterhead">
             <div class="container">
-            <a href="Andre.html" id="logo">Your Name</a>
+            <a href="Andre.html" id="logo">Andre Brown</a>
             <nav>
                 <a href="Andre.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
@@ -16,8 +17,8 @@
             </nav>
             </div>
         </header>
-    <div id="main" class="container">        
-        <section class="main">
+    <div id="main-container" class="container">        
+        <section class="main-container">
             <h1>About Me</h1>
 
             <img src="http://via.placeholder.com/250/ffffff/000000" alt="PlaceHolder" height="150" width="150" id="face">
@@ -31,7 +32,9 @@
          <section class="sidebar">
              <div id="connect">
                  <h2>Connect With Me</h2>
-                    <p>bhhfbsbhhfsb</p>
+                    <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github">
+                    <img src="C:\Users\Andre\Desktop\assest\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                    <img src="C:\Users\Andre\Desktop\assest\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
              </div>
 
          </section>
