--- a/Andre.html
+++ b/Andre.html
@@ -4,6 +4,7 @@
         <title></title>
         <link rel="stylesheet" href="reset.css" type="text/css">
         <link rel="stylesheet" href="style.css" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -21,7 +22,7 @@
         <section class="main-container">
             <h1>About Me</h1>
 
-            <img src="http://via.placeholder.com/250/ffffff/000000" alt="PlaceHolder" height="150" width="150" id="face">
+            <img src="C:\Users\Andre\Desktop\unit-4-game\assets\images\biggie.jpeg" alt="PlaceHolder" height="150" width="150" id="face">
                 
                 <p class="p">Hello my name is Andre. Currently, I'm in the UofT SCS Bootcamp.</p> 
                 <p class="p2">It is the first ever bootcamp to be held in Canada and I'm very excited to be part of this monumental opportunity.</p> 
