--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="reset.css" type="text/css">
         <link rel="stylesheet" href="style.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -46,14 +47,14 @@
                 <h3>Rock, Paper, Scissors</h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\assest\rockpaperscissors.jpe" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src="C:\Users\Andre\Desktop\Giphy\assets\images\shoe.gif" alt="Hangman" height="150" width="150" class="auth-image">
                 
                 <h3><a href="https://andre2992.github.io/Giphy/">Giphy</a></h3>
             </div>
             <section class="sidebar">
                 <div id="connect">
                     <h2>Connect With Me</h2>
-                       <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github">
+                       <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github" a href="https://github.com/Andre2992"></a></img>
                        <img src="C:\Users\Andre\Desktop\assest\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
                        <img src="C:\Users\Andre\Desktop\assest\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                 </div>
