--- a/Andre.html
+++ b/Andre.html
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-        <link rel="stylesheet" href="reset.css" type="text/css">
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <header id="masterhead">
-            <div class="container">
+
+<head>
+    <title></title>
+    <link rel="stylesheet" href="reset.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <header id="masterhead">
+        <div class="container">
             <a href="Andre.html" id="logo">Andre Brown</a>
             <nav>
                 <a href="Andre.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
-            </div>
-        </header>
-    <div id="main-container" class="container">        
+        </div>
+    </header>
+    <div id="main-container" class="container">
         <section class="main-container">
             <h1>About Me</h1>
 
             <img src="C:\Users\Andre\Desktop\unit-4-game\assets\images\biggie.jpeg" alt="PlaceHolder" height="150" width="150" id="face">
-                
-                <p class="p">Hello my name is Andre. Currently, I'm in the UofT SCS Bootcamp.</p> 
-                <p class="p2">It is the first ever bootcamp to be held in Canada and I'm very excited to be part of this monumental opportunity.</p> 
-                <p class="p3"><br>I have a passion for creativity and thinking outside of the box and I believe that learning the material being taught within this bootcamp will allow me to implement my ideas for the world to see.</p> 
-                <p class="p4"><br>Aside from that, I enjoy palying sports, basketball being number 1, I enjoy drawing and I also like playing videogames.</p>
-         </section>
 
-         <section class="sidebar">
-             <div id="connect">
-                 <h2>Connect With Me</h2>
+            <p class="p">Hello my name is Andre. Currently, I'm in the UofT SCS Bootcamp.</p>
+            <p class="p2">It is the first ever bootcamp to be held in Canada and I'm very excited to be part of this monumental opportunity.</p>
+            <p class="p3">
+                <br>I have a passion for creativity and thinking outside of the box and I believe that learning the material
+                being taught within this bootcamp will allow me to implement my ideas for the world to see.</p>
+            <p class="p4">
+                <br>Aside from that, I enjoy palying sports, basketball being number 1, I enjoy drawing and I also like playing
+                videogames.
+            </p>
+        </section>
+
+        <section class="sidebar">
+            <div id="connect">
+                <h2>Connect With Me</h2>
+                <a href="https://github.com/Andre2992">
                     <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github">
+                </a>
+                <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
                     <img src="C:\Users\Andre\Desktop\assest\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                </a>
+                <a href="https://stackoverflow.com/users/9110067/andre-brown">
                     <img src="C:\Users\Andre\Desktop\assest\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
-             </div>
+                </a>
+            </div>
 
-         </section>
+        </section>
     </div>
     <footer>
         <div class="container">
-        &copy; Copyright 2018 Andre Brown</p>
+            &copy; Copyright 2018 Andre Brown</p>
         </div>
     </footer>
 
 
 
-    </body>
+</body>
+
 </html>
