--- a/contact.html
+++ b/contact.html
@@ -1,70 +1,74 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Contact</title>
-        <link rel="stylesheet" href="reset.css" type="text/css">
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <header id="masterhead">
-            <div class="container">
+
+<head>
+    <title>Contact</title>
+    <link rel="stylesheet" href="reset.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <header id="masterhead">
+        <div class="container">
             <a href="Andre.html" id="logo">Andre Brown</a>
             <nav>
                 <a href="Andre.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
-            </div>
-        </header>
-    <div id="main" class="container">        
+        </div>
+    </header>
+    <div id="main" class="container">
         <section class="main">
             <h1>Contact</h1>
             <form id="contact-form">
                 <ul>
                     <li>
                         <label for="name">Name</label>
-                        <input type="text" name="name" id="name"
-                        placeholder="John Smith"
-                        required="required">
+                        <input type="text" name="name" id="name" placeholder="John Smith" required="required">
                     </li>
                     <li>
-                            <label for="email">Email</label>
-                            <input type="text" name="email" id="email"
-                            placeholder="example@gmail.com"
-                            required="required">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="example@gmail.com" required="required">
                     </li>
                     <li>
-                            <label for="message">Message</label>
-                            <textarea id="message" name="message"
-                            required="required"></textarea>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" required="required"></textarea>
                     </li>
                 </ul>
                 <input type="submit" name="submit">
 
-           
+
             </form>
         </section>
 
         <section class="sidebar">
             <div id="connect">
                 <h2>Connect With Me</h2>
-                   <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github">
-                   <img src="C:\Users\Andre\Desktop\assest\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
-                   <img src="C:\Users\Andre\Desktop\assest\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                <a href="https://github.com/Andre2992">
+                    <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github">
+                </a>
+                <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
+                    <img src="C:\Users\Andre\Desktop\assest\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                </a>
+                <a href="https://stackoverflow.com/users/9110067/andre-brown">
+                    <img src="C:\Users\Andre\Desktop\assest\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                </a>
             </div>
 
         </section>
     </div>
     <footer>
         <div class="container">
-        &copy; Copyright 2018 Andre Brown</p>
+            &copy; Copyright 2018 Andre Brown</p>
         </div>
     </footer>
 
 
 
-    </body>
+</body>
+
 </html>
