added correct links

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a href="Andre.html" id="logo">Andre Brown</a>
             <nav>
-                <a href="Andre.html">About</a>
+                <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
@@ -26,14 +26,14 @@
             <h1>Porfolio</h1>
 
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\Word-Guess-Game\assets\Images\basketballcourt.jpe" alt="Hangman" height="150" width="150"
+                <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\basketballcourt.jpeg" alt="Hangman" height="150" width="150"
                     class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/Word-Guess-Game/">Basketball Hangman</a>
                 </h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\unit-4-game\assets\images\tupac.jpeg" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\tupac.jpeg" alt="tupac" height="150" width="150" class="auth-image">
 
                 <h3>
                     <a href="https://andre2992.github.io/unit-4-game/">Hip Hop Crystals</a>
@@ -41,17 +41,17 @@
             </div>
 
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\TriviaGame\assets\images\drj.gif" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\drj.gif" alt="drj" height="150" width="150" class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/TriviaGame/">Trivia Game</a>
                 </h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\assest\widget.jpe" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src="C:\Users\Andre\Desktop\assest\widget.jpe" alt="image" height="150" width="150" class="auth-image">
                 <h3>Rutgers Info Widget</h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\assest\rockpaperscissors.jpe" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src="C:\Users\Andre\Desktop\assest\rockpaperscissors.jpe" alt="image" height="150" width="150" class="auth-image">
 
                 <h3>Rock, Paper, Scissors</h3>
             </div>
@@ -66,16 +66,16 @@
                 <div id="connect">
                     <h2>Connect With Me</h2>
                     <a href="https://github.com/Andre2992">
-                        <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github">
+                        <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
                     </a>
                     <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
-                        <img src="C:\Users\Andre\Desktop\assest\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                        <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
                     </a>
                     <a href="https://stackoverflow.com/users/9110067/andre-brown">
-                        <img src="C:\Users\Andre\Desktop\assest\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                        <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                     </a>
                 </div>
-
+    
             </section>
     </div>
     <footer>
