--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a href="Andre.html" id="logo">Andre Brown</a>
             <nav>
-                <a href="Andre.html">About</a>
+                <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
@@ -42,13 +42,13 @@
             <div id="connect">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/Andre2992">
-                    <img src="C:\Users\Andre\Desktop\assest\if_github_306201.png" class="social" alt="Github">
+                    <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
                 </a>
                 <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
-                    <img src="C:\Users\Andre\Desktop\assest\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                    <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
                 </a>
                 <a href="https://stackoverflow.com/users/9110067/andre-brown">
-                    <img src="C:\Users\Andre\Desktop\assest\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                    <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                 </a>
             </div>
 
