--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <h1>Porfolio</h1>
 
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\basketballcourt.jpeg" alt="Hangman" height="150" width="150"
+                <img src="\HW-Wireframe\images\basketballcourt.jpeg" alt="Hangman" height="150" width="150"
                     class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/Word-Guess-Game/">Basketball Hangman</a>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\drj.gif" alt="drj" height="150" width="150" class="auth-image">
+                <img src="\HW-Wireframe\images\drj.gif" alt="drj" height="150" width="150" class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/TriviaGame/">Trivia Game</a>
                 </h3>
@@ -66,13 +66,13 @@
                 <div id="connect">
                     <h2>Connect With Me</h2>
                     <a href="https://github.com/Andre2992">
-                        <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
+                        <img src="\HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
                     </a>
                     <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
-                        <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                        <img src="\HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
                     </a>
                     <a href="https://stackoverflow.com/users/9110067/andre-brown">
-                        <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                        <img src="\HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                     </a>
                 </div>
     
