--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="work">
-                <img src="\HW-Wireframe\images\drj.gif" alt="drj" height="150" width="150" class="auth-image">
+                <img src=".HW-Wireframe\images\drj.gif" alt="drj" height="150" width="150" class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/TriviaGame/">Trivia Game</a>
                 </h3>
