--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <header id="masterhead">
         <div class="container">
-            <a href="Andre.html" id="logo">Andre Brown</a>
+            <a href="index.html" id="logo">Andre Brown</a>
             <nav>
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
@@ -49,13 +49,13 @@
             <div id="connect">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/Andre2992">
-                    <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
+                    <img src=".HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
                 </a>
                 <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
-                    <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                    <img src=".HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
                 </a>
                 <a href="https://stackoverflow.com/users/9110067/andre-brown">
-                    <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                    <img src=".HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                 </a>
             </div>
 
