--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <header id="masterhead">
         <div class="container">
-            <a href="Andre.html" id="logo">Andre Brown</a>
+            <a href="index.html" id="logo">Andre Brown</a>
             <nav>
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
@@ -26,14 +26,14 @@
             <h1>Porfolio</h1>
 
             <div class="work">
-                <img src="\HW-Wireframe\images\basketballcourt.jpeg" alt="Hangman" height="150" width="150"
+                <img src=".HW-Wireframe\images\basketballcourt.jpeg" alt="Hangman" height="150" width="150"
                     class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/Word-Guess-Game/">Basketball Hangman</a>
                 </h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\HW-Wireframe\images\tupac.jpeg" alt="tupac" height="150" width="150" class="auth-image">
+                <img src=".HW-Wireframe\images\tupac.jpeg" alt="tupac" height="150" width="150" class="auth-image">
 
                 <h3>
                     <a href="https://andre2992.github.io/unit-4-game/">Hip Hop Crystals</a>
@@ -47,16 +47,16 @@
                 </h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\assest\widget.jpe" alt="image" height="150" width="150" class="auth-image">
+                <img src=".assest\widget.jpe" alt="image" height="150" width="150" class="auth-image">
                 <h3>Rutgers Info Widget</h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\assest\rockpaperscissors.jpe" alt="image" height="150" width="150" class="auth-image">
+                <img src=".assest\rockpaperscissors.jpe" alt="image" height="150" width="150" class="auth-image">
 
                 <h3>Rock, Paper, Scissors</h3>
             </div>
             <div class="work">
-                <img src="C:\Users\Andre\Desktop\Giphy\assets\images\shoe.gif" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src=".Giphy\assets\images\shoe.gif" alt="Hangman" height="150" width="150" class="auth-image">
 
                 <h3>
                     <a href="https://andre2992.github.io/Giphy/">Giphy</a>
@@ -66,13 +66,13 @@
                 <div id="connect">
                     <h2>Connect With Me</h2>
                     <a href="https://github.com/Andre2992">
-                        <img src="\HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
+                        <img src=".HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
                     </a>
                     <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
-                        <img src="\HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                        <img src=".HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
                     </a>
                     <a href="https://stackoverflow.com/users/9110067/andre-brown">
-                        <img src="\HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                        <img src=".HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                     </a>
                 </div>
     
