--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,13 @@
             <div id="connect">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/Andre2992">
-                    <img src=".HW-Wireframe\images\if_github_306201.png" class="social" alt="Github">
+                    <img src=".//images/if_github_306201.png" class="social" alt="Github">
                 </a>
                 <a href="https://www.linkedin.com/in/andre-brown-36a69a3b/">
-                    <img src=".HW-Wireframe\images\if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
+                    <img src="./images/if_linkdin__social_media_logo_2986200.png" class="social" alt="Linkdin">
                 </a>
                 <a href="https://stackoverflow.com/users/9110067/andre-brown">
-                    <img src=".HW-Wireframe\images\if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
+                    <img src=".//images/if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                 </a>
             </div>
 
