--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
             <h1>Porfolio</h1>
 
             <div class="work">
-                <img src=".HW-Wireframe\images\basketballcourt.jpeg" alt="Hangman" height="150" width="150"
+                <img src="/images/basketballcourt.jpeg" alt="Hangman" height="150" width="150"
                     class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/Word-Guess-Game/">Basketball Hangman</a>
                 </h3>
             </div>
             <div class="work">
-                <img src=".HW-Wireframe\images\tupac.jpeg" alt="tupac" height="150" width="150" class="auth-image">
+                <img src="./images/tupac.jpeg" alt="tupac" height="150" width="150" class="auth-image">
 
                 <h3>
                     <a href="https://andre2992.github.io/unit-4-game/">Hip Hop Crystals</a>
@@ -41,17 +41,17 @@
             </div>
 
             <div class="work">
-                <img src=".HW-Wireframe\images\drj.gif" alt="drj" height="150" width="150" class="auth-image">
+                <img src="./images/drj.gif" alt="drj" height="150" width="150" class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/TriviaGame/">Trivia Game</a>
                 </h3>
             </div>
             <div class="work">
-                <img src=".assest\widget.jpe" alt="image" height="150" width="150" class="auth-image">
+                <img src="./images/basketballcourt.jpeg" alt="image" height="150" width="150" class="auth-image">
                 <h3>Rutgers Info Widget</h3>
             </div>
             <div class="work">
-                <img src=".assest\rockpaperscissors.jpe" alt="image" height="150" width="150" class="auth-image">
+                <img src="/images/biggie.jpeg" alt="image" height="150" width="150" class="auth-image">
 
                 <h3>Rock, Paper, Scissors</h3>
             </div>
