--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="main-container">
             <h1>About Me</h1>
 
-            <img src="/images/biggie.jpeg" alt="PlaceHolder" height="150" width="150" id="face">
+            <img src="./images/biggie.jpeg" alt="PlaceHolder" height="150" width="150" id="face">
 
             <p class="p">Hello my name is Andre. Currently, I'm in the UofT SCS Bootcamp.</p>
             <p class="p2">It is the first ever bootcamp to be held in Canada and I'm very excited to be part of this monumental opportunity.</p>
