--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <h1>Porfolio</h1>
 
             <div class="work">
-                <img src="/images/basketballcourt.jpeg" alt="Hangman" height="150" width="150"
+                <img src="./images/basketballcourt.jpeg" alt="Hangman" height="150" width="150"
                     class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/Word-Guess-Game/">Basketball Hangman</a>
@@ -51,12 +51,12 @@
                 <h3>Rutgers Info Widget</h3>
             </div>
             <div class="work">
-                <img src="/images/biggie.jpeg" alt="image" height="150" width="150" class="auth-image">
+                <img src="./images/biggie.jpeg" alt="image" height="150" width="150" class="auth-image">
 
                 <h3>Rock, Paper, Scissors</h3>
             </div>
             <div class="work">
-                <img src=".Giphy\assets\images\shoe.gif" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src="./Giphy\assets\images\shoe.gif" alt="Hangman" height="150" width="150" class="auth-image">
 
                 <h3>
                     <a href="https://andre2992.github.io/Giphy/">Giphy</a>
