--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                 <h3>Rock, Paper, Scissors</h3>
             </div>
             <div class="work">
-                <img src="./Giphy\assets\images\shoe.gif" alt="Hangman" height="150" width="150" class="auth-image">
+                <img src="./images/shoe.gif" alt="gif" height="150" width="150" class="auth-image">
 
                 <h3>
                     <a href="https://andre2992.github.io/Giphy/">Giphy</a>
