--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,7 @@
             <h1>Porfolio</h1>
 
             <div class="work">
-                <img src="./images/basketballcourt.jpeg" alt="Hangman" height="150" width="150"
-                    class="auth-image">
+                <img src="./images/basketballcourt.jpeg" alt="Hangman" height="150" width="150" class="auth-image">
                 <h3>
                     <a href="https://andre2992.github.io/Word-Guess-Game/">Basketball Hangman</a>
                 </h3>
@@ -47,8 +46,11 @@
                 </h3>
             </div>
             <div class="work">
-                <img src="./images/basketballcourt.jpeg" alt="image" height="150" width="150" class="auth-image">
-                <h3>Rutgers Info Widget</h3>
+                <img src="./images/header-stock.jpg" alt="image" height="150" width="150" class="auth-image">
+                <h3>
+                    <a href="https://github.com/Rye-Guy/crypto-website">Crypto Advi</a>
+
+                </h3>
             </div>
             <div class="work">
                 <img src="./images/biggie.jpeg" alt="image" height="150" width="150" class="auth-image">
@@ -75,7 +77,7 @@
                         <img src=".//images/if_Stack_Overflow_1298710.png" class="social" alt="Stack Overflow">
                     </a>
                 </div>
-    
+
             </section>
     </div>
     <footer>
