--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,9 @@
             <div class="work">
                 <img src="./images/biggie.jpeg" alt="image" height="150" width="150" class="auth-image">
 
-                <h3>Rock, Paper, Scissors</h3>
+                <h3>
+                        <a href="https://andre2992.github.io/TrainTime/">Train Time</a>
+                </h3>
             </div>
             <div class="work">
                 <img src="./images/shoe.gif" alt="gif" height="150" width="150" class="auth-image">
