added new landing page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" sizes="96x96" href="./images/andre-logo-blackOnWhite.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -24,8 +25,9 @@
     <div id="main-container" class="container">
         <section class="main-container">
             <h1>About Me</h1>
+            <hr>
 
-            <img src="./images/biggie.jpeg" alt="PlaceHolder" height="150" width="150" id="face">
+            <img src="./images/me.png" alt="Me" height="150" width="150" id="face">
 
             <p class="p">Hello my name is Andre. Currently, I'm in the UofT SCS Bootcamp.</p>
             <p class="p2">It is the first ever bootcamp to be held in Canada and I'm very excited to be part of this monumental opportunity.</p>
@@ -54,6 +56,7 @@
 
         </section>
     </div>
+
     <footer>
         <div class="container">
             &copy; Copyright 2018 Andre Brown</p>
