--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" sizes="96x96" href="./images/andre-logo-blackOnWhite.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
